--- a/pom.xml
+++ b/pom.xml
@@ -19,21 +19,27 @@
 
     <!-- Dependency Version Properties -->
     <properties>
-        <portlet-api.version>2.0</portlet-api.version>
-        <servlet-api.version>2.5</servlet-api.version>
-        <spring.version>3.0.5.RELEASE</spring.version>
+        <commons-lang.version>2.6</commons-lang.version>
+        <commons-logging.version>1.1.1</commons-logging.version>
+        <ehcache-spring-annotations.version>1.2.0</ehcache-spring-annotations.version>
         <jackson.version>1.9.6</jackson.version>
         <jstl.version>1.1.2</jstl.version>
         <log4j.version>1.2.14</log4j.version>
         <joda-time.version>2.0</joda-time.version>
         <junit.version>4.8.2</junit.version>
-        <commons-lang.version>2.6</commons-lang.version>
-        <commons-logging.version>1.1.1</commons-logging.version>
+        <portlet-api.version>2.0</portlet-api.version>
         <resource-server.version>1.0.23</resource-server.version>
+        <servlet-api.version>2.5</servlet-api.version>
+        <spring.version>3.0.5.RELEASE</spring.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.googlecode.ehcache-spring-annotations</groupId>
+                <artifactId>ehcache-spring-annotations</artifactId>
+                <version>${ehcache-spring-annotations.version}</version>
+            </dependency>
             <dependency>
                 <groupId>commons-logging</groupId>
                 <artifactId>commons-logging</artifactId>
@@ -121,6 +127,10 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.googlecode.ehcache-spring-annotations</groupId>
+            <artifactId>ehcache-spring-annotations</artifactId>
+        </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
